---
source: libs/sqf/tests/simple.rs
expression: ast
---
[
    Expression(
        UnaryCommand(
            Named(
                "params",
            ),
            Array(
                [
                    String(
                        "_arg1",
                        8..15,
                        DoubleQuote,
                    ),
                    String(
                        "_arg2",
                        17..24,
                        DoubleQuote,
                    ),
                ],
                8..24,
            ),
            0..6,
        ),
        0..25,
    ),
    Expression(
        BinaryCommand(
            Named(
                "then",
            ),
            UnaryCommand(
                Named(
                    "if",
                ),
                BinaryCommand(
                    Eq,
                    UnaryCommand(
                        Named(
                            "typeName",
                        ),
                        Variable(
                            "_arg1",
                            40..45,
                        ),
                        31..39,
                    ),
                    String(
                        "OBJECT",
                        49..57,
                        DoubleQuote,
                    ),
                    46..48,
                ),
                27..29,
            ),
            Code(
                Statements {
                    content: [
                        AssignGlobal(
                            "_arg1",
                            Array(
                                [
                                    UnaryCommand(
                                        Named(
                                            "eyePos",
                                        ),
                                        Variable(
                                            "_arg1",
                                            82..87,
                                        ),
                                        75..81,
                                    ),
                                    Variable(
                                        "_arg1",
                                        89..94,
                                    ),
                                ],
                                75..94,
                            ),
                            66..95,
                        ),
                    ],
                    source: "_arg1 = [eyePos _arg1, _arg1]",
                    span: 66..95,
                },
            ),
            59..63,
        ),
        27..97,
    ),
    Expression(
        BinaryCommand(
            Named(
                "then",
            ),
            UnaryCommand(
                Named(
                    "if",
                ),
                BinaryCommand(
                    Eq,
                    UnaryCommand(
                        Named(
                            "typeName",
                        ),
                        Variable(
                            "_arg2",
                            112..117,
                        ),
                        103..111,
                    ),
                    String(
                        "OBJECT",
                        121..129,
                        DoubleQuote,
                    ),
                    118..120,
                ),
                99..101,
            ),
            Code(
                Statements {
                    content: [
                        AssignGlobal(
                            "_arg2",
                            Array(
                                [
                                    UnaryCommand(
                                        Named(
                                            "eyePos",
                                        ),
                                        Variable(
                                            "_arg2",
                                            154..159,
                                        ),
                                        147..153,
                                    ),
                                    Variable(
                                        "_arg2",
                                        161..166,
                                    ),
                                ],
                                147..166,
                            ),
                            138..167,
                        ),
                    ],
                    source: "_arg2 = [eyePos _arg2, _arg2]",
                    span: 138..167,
                },
            ),
            131..135,
        ),
        99..169,
    ),
    Expression(
        BinaryCommand(
            Named(
                "params",
            ),
            Variable(
                "_arg1",
                171..176,
            ),
            Array(
                [
                    String(
                        "_position1",
                        185..197,
                        DoubleQuote,
                    ),
                    Array(
                        [
                            String(
                                "_ignore1",
                                200..210,
                                DoubleQuote,
                            ),
                            NularCommand(
                                NularCommand {
                                    name: "objNull",
                                },
                                212..219,
                            ),
                        ],
                        200..219,
                    ),
                ],
                185..220,
            ),
            177..183,
        ),
        171..221,
    ),
    Expression(
        BinaryCommand(
            Named(
                "params",
            ),
            Variable(
                "_arg2",
                223..228,
            ),
            Array(
                [
                    String(
                        "_position2",
                        237..249,
                        DoubleQuote,
                    ),
                    Array(
                        [
                            String(
                                "_ignore2",
                                252..262,
                                DoubleQuote,
                            ),
                            NularCommand(
                                NularCommand {
                                    name: "objNull",
                                },
                                264..271,
                            ),
                        ],
                        252..271,
                    ),
                ],
                237..272,
            ),
            229..235,
        ),
        223..273,
    ),
    AssignLocal(
        "_multiplier",
        BinaryCommand(
            Div,
            Number(
                FloatOrd(
                    1.0,
                ),
                298..299,
            ),
            BinaryCommand(
                Exp,
                Number(
                    FloatOrd(
                        2.0,
                    ),
                    303..304,
                ),
                BinaryCommand(
                    Div,
                    BinaryCommand(
                        Named(
                            "distance",
                        ),
                        Variable(
                            "_position1",
                            309..319,
                        ),
                        Variable(
                            "_position2",
                            329..339,
                        ),
                        320..328,
                    ),
                    Number(
                        FloatOrd(
                            100.0,
                        ),
                        343..346,
                    ),
                    341..342,
                ),
                305..306,
            ),
            300..301,
        ),
        276..348,
    ),
    Expression(
        BinaryCommand(
            Mul,
            BinaryCommand(
                Named(
                    "checkVisibility",
                ),
                Array(
                    [
                        Variable(
                            "_ignore1",
                            352..360,
                        ),
                        String(
                            "VIEW",
                            362..368,
                            DoubleQuote,
                        ),
                        Variable(
                            "_ignore2",
                            370..378,
                        ),
                    ],
                    352..378,
                ),
                Array(
                    [
                        Variable(
                            "_position1",
                            397..407,
                        ),
                        Variable(
                            "_position2",
                            409..419,
                        ),
                    ],
                    397..419,
                ),
                380..395,
            ),
            Variable(
                "_multiplier",
                424..435,
            ),
            422..423,
        ),
        350..435,
    ),
]
